# position-based-dynamics

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/: bunny_tet.mesh  cube_tet.mesh
include/: constraint.h  deformable_mesh.h  edge_length_constraint.h  get_simple_cloth_model.h  solve.h  tetrahedron_volume_constraint.h
include/pbd/: constraint.h  deformable_mesh.h  edge_length_constraint.h  get_simple_bar_model.h  get_simple_cloth_model.h  green_strain_elastic_constraint.h  solve.h  tetrahedron_volume_constraint.h
include/solver/: solve.h
include/ui/: mouse_down_handler.h  mouse_move_handler.h  physics_params.h  picking_state.h  pre_draw_handler.h
include/xpbd/: constraint.h  deformable_mesh.h  edge_length_constraint.h  green_strain_elastic_constraint.h  neohookean_elasticity_constraint.h  tetrahedron_volume_constraint.h
src/: deformable_mesh.cpp  edge_length_constraint.cpp  main.cpp  plot.cpp  solve.cpp  tetrahedron_volume_constraint.cpp
src/pbd/: deformable_mesh.cpp  edge_length_constraint.cpp  green_strain_elastic_constraint.cpp  solve.cpp  tetrahedron_volume_constraint.cpp
src/solver/: solve.cpp
src/ui/: mouse_down_handler.cpp  mouse_move_handler.cpp  pre_draw_handler.cpp
src/xpbd/: deformable_mesh.cpp  edge_length_constraint.cpp  green_strain_elastic_constraint.cpp  neohookean_elasticity_constraint.cpp  tetrahedron_volume_constraint.cpp
